# epub_experiments

./: .gitignore  AGENTS.md  PDF_PROCESSING_PLAN.md  README.md  pyproject.toml
src/epub_experiments/: audify.py  cli.py  gutenberg.py  novelbin.py  pdf_ingest.py
tests/: test_audify.py  test_gutenberg.py  test_gutenberg_metadata.py  test_novelbin_scrape.py  test_pdf_ingest.py
tests/fixtures/: gutenberg_20203_sample.html
