[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epub-experiments"
version = "0.1.0"
description = "Tools for extracting and processing EPUB data"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "John Titus Jungao" }]
dependencies = [
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
epub-exp = "epub_experiments.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
